# genai-for-engineers-class

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: README.md  sentences.parquet
notebooks/: 01-embeddings.ipynb  01-tokenization.ipynb  02-embeddings.ipynb  02-vector_databases.ipynb  03-rag_from_scratch.ipynb  03-vector-databases.ipynb  03-vector_databases.ipynb  04-haystack_basics.ipynb  04-stable-diffusion.ipynb  05-haystack_rag.ipynb  05-veo.ipynb  06-guardrails.ipynb  06-rag-from-scratch.ipynb  07-haystack-basics.ipynb  07-observability.ipynb  08-function_calling.ipynb  08-haystack-rag.ipynb  09-agents.ipynb  09-guardrails.ipynb  10-agents_income_statement.ipynb  10-observability.ipynb  11-function-calling.ipynb  12-agents.ipynb  13-agents-income-statement.ipynb  14-stock-agent-openai.ipynb
notebooks/solutions/: 01-solutions-embeddings.ipynb  01-solutions-tokenization.ipynb  02-solutions-embeddings.ipynb  02-solutions-vector_database.ipynb  03-solutions-rag_from_scratch.ipynb  03-solutions-vector-database.ipynb  03-solutions-vector_database.ipynb  04-solutions-haystack_basics.ipynb  04-solutions-stable-diffusion.ipynb  05-solutions-haystack_rag.ipynb  05-solutions-veo.ipynb  06-solutions-guardrails.ipynb  06-solutions-rag-from-scratch.ipynb  07-solutions-haystack-basics.ipynb  07-solutions-observability.ipynb  08-solutions-function_calling.ipynb  08-solutions-haystack-rag.ipynb  09-solutions-agents.ipynb  09-solutions-guardrails.ipynb  10-solutions-agents_income_statement.ipynb  10-solutions-observability.ipynb  11-solutions-function-calling.ipynb  12-solutions-agents.ipynb  13-solutions-agents-income-statement.ipynb  14-solutions-stock-agent-openai.ipynb
src/class_utils/: data.py  embeddings.py  haystack_pipelines.py
src/movie_embeddings/: data.py  embedding_visualization.py  embeddings.py  haystack_pipelines.py
src/utils/: data.py  embedding_visualization.py  embeddings.py
