[project]
name = "genai-for-engineers-class"
version = "0.1.0"
description = "Code examples for the GenAI for Engineers class"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic-haystack>=3.1.0",
    "autogen>=0.9.7",
    "guardrails-ai>=0.5.15",
    "haystack-ai>=2.15.2",
    "langfuse>=2.0.1, <3.0.0",
    "langfuse-haystack>=2.0.1",
    "litellm>=1.74.8",
    "numpy>=2.2.6",
    "openai>=1.97.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "qdrant-client>=1.15.0",
    "qdrant-haystack>=9.2.0",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
ide = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
]

[tool.uv]
package = true
